ags (5.4.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved tempo program restore from XML

ags (5.4.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved tempo program

ags (5.4.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* TODO:JK: MIDI v2.0 support
	* TODO:JK: improved tempo program
	* implemented ags_automation_filter()
	* implemented ags_program_filter()
	* implemented ags_automation_control_name_key_manager.[ch]
	* implemented ags_program_control_name_key_manager.[ch]
	* refactored AgsAutomation, AgsPort and related
	* fixed only return exact match for automation editor

ags (5.3.12)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed potential SIGSEGV with automation editor
	* fixed ags-fx-vst3 bug
	* updated some screenshots of docs

ags (5.3.11)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing restore of MIDI preferences in UI
	* minor improvements

ags (5.3.10)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved scrolling of tempo editor
	* minor improvements

ags (5.3.9)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved ags_tempo_edit_draw_tempo() first, last and intersection drawing
	* improved ags_automation_edit_compare_x_offset_func()
	* improved avoid duplicates in AgsAutomation modified ags_automation_add()
	* improved avoid duplicates in AgsProgram modified ags_tempo_add()
	* improved calling property from output/input soundcard setter in ags_recall.c
	* improved ags_program_sort_func() respect control_name field while sorting using g_strcmp0()
	* minor improvements

ags (5.3.8)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* minor bug-fixes to automation editor

ags (5.3.7)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed automation edit ramp dialog
	* fixed automation edit copy & paste

ags (5.3.6)
